Fix fonts on mobile, fix monochrome emoji coverage

--- a/gulp/res/css/themes/marzichan-shared.css
+++ b/gulp/res/css/themes/marzichan-shared.css
@@ -60,7 +60,7 @@ main {
 }
 
 body {
-	font-family: "Inter", "M PLUS 1p", sans-serif;
+	font-family: "Inter", "M PLUS 1p", "Noto Sans Symbols", "Noto Emoji", sans-serif;
 }
 
 /* fix thread watcher alignment with fonts */
